    'ghistory.daily' reports.

New Configuration Options in Taskwarrior 2.5.2

  - New 'relative' column format for 'date' type columns does what 'remaining'
    and 'countdown' do, but in one format.
  - The 'default.scheduled' date/duration works just like 'default.due'.
  - The 'report.timesheet.filter' setting controls the tasks shown by the
    'timesheet' command.

Newly Deprecated Features in Taskwarrior 2.5.2

  - The 'DUETODAY' virtual tag is a synonym for the 'TODAY' virtual tag, and is
    not needed.
  - The 'new-uuid' verbosity option is to be removed, as it is redundant, its
    functionality will be merged with 'new-id' option.
  - The use of alternate Boolean configuration settings is deprecated. Use values
    "0" for off, and "1" for on.  Avoid used of "on", "off", "true", "t",
    "false", "f", "yes", "y", "no", "n".
  - The 'context.program', 'context.args', 'context.width' and 'context.height'
    DOM references are deprecated, replaced by similarly-named 'tw.xxx'
    references.

Removed Features in 2.5.2

  - Removed 'alias._query' default configuration.
  - There is no longer a 16-color default configuration for some platforms,
    making all platforms 256-color.
  - The configuration setting 'burndown.bias' is no longer used.
  - The algorithm used to estimate completion on the 'burndown' reports has
    been replaced by something less icky. Estimates are now based on the net
    completion rate after the peak number of pending tasks.
  - The unused 'dom' and 'shell.prompt' configuration settings were removed.
  - Translations are no longer supported.

Known Issues

Taskwarrior has been built and tested on the following configurations:

  * macOS
  * Fedora
  * Ubuntu
  * Debian
  * Arch
  * FreeBSD
  * CentOS

---

While Taskwarrior has undergone testing, bugs are sure to remain.  If you
encounter a bug, please enter a new issue at:

  https://bug.tasktools.org

Or just send a message to:

  support@taskwarrior.org

Thank you.
