@@ -142,6 +142,7 @@ The following submitted code, packages or analysis, and deserve special thanks:
   Paul J. Fenwick
   Michael Neumann
   Mark Scannell
+  buhtz
 
 Thanks to the following, who submitted detailed bug reports and excellent
 suggestions:
