@@ -173,11 +173,11 @@ The official site at
 
 .TP
 The official code repository at
-<https://git.tasktools.org/scm/tm/task.git>
+<https://github.com/GothenburgBitFactory/taskwarrior>
 
 .TP
 You can contact the project by writing an email to
-<support@taskwarrior.org>
+<support@gothenburgBitFactory.org>
 
 .SH REPORTING BUGS
 .TP
